重构部分测试代码

--- a/test_for_teacher/views/index.html.erb
+++ b/test_for_teacher/views/index.html.erb
@@ -1,6 +1,5 @@
 <h1>特快拉教练版测试</h1>
 
-<!-- 注册尚未写 -->
 <table border=0>
   <tr>
     <th>测试内容</th>
@@ -8,47 +7,47 @@
   </tr>
   <tr>
     <td>账号登录</td>
-    <td><%= result 1 %></td>
+    <td><%= result 'login' %></td>
   </tr>
   <tr>
     <td>获取行程安排</td>
-    <td><%= result 2 %></td>
+    <td><%= result 'get_the_scheduling' %></td>
   </tr>
   <tr>
     <td>获取待处理订单</td>
-    <td><%= result 3 %></td>
+    <td><%= result 'get_the_waiting_orders' %></td>
   </tr>
   <tr>
     <td>获取已接单订单</td>
-    <td><%= result 4 %></td>
+    <td><%= result 'get_the_accpeting_orders' %></td>
   </tr>
   <tr>
     <td>获取已完成订单</td>
-    <td><%= result 5 %></td>
+    <td><%= result 'get_the_finish_orders' %></td>
   </tr>
   <tr>
     <td>获取个人资料</td>
-    <td><%= result 6 %></td>
+    <td><%= result 'get_the_info' %></td>
   </tr>
   <tr>
     <td>修改个人资料</td>
-    <td><%= result 7 %></td>
+    <td><%= result 'edit_info' %></td>
   </tr>
   <tr>
     <td>获取学员评价</td>
-    <td><%= result 8 %></td>
+    <td><%= result 'get_the_comment' %></td>
   </tr>
   <tr>
     <td>获取常见问题</td>
-    <td><%= result 9 %></td>
+    <td><%= result 'get_questions' %></td>
   </tr>
   <tr>
     <td>更改密码</td>
-    <td><%= result 10 %></td>
+    <td><%= result 'reset_password' %></td>
   </tr>
   <tr>
     <td>退出登录</td>
-    <td><%= result 11 %></td>
+    <td><%= result 'logout' %></td>
   </tr>
 </table>
 
