--- a/test_for_shop/views/index.html.erb
+++ b/test_for_shop/views/index.html.erb
@@ -1,6 +1,5 @@
 <h1>特快拉门店版测试</h1>
 
-<!-- 注册尚未写 -->
 <table border=0>
   <tr>
     <th>测试内容</th>
@@ -8,39 +7,39 @@
   </tr>
   <tr>
     <td>门店登录</td>
-    <td><%= result 1 %></td>
+    <td><%= result 'login' %></td>
   </tr>
   <tr>
     <td>获取首页信息</td>
-    <td><%= result 2 %></td>
+    <td><%= result 'get_index_data' %></td>
   </tr>
   <tr>
     <td>增加咨询</td>
-    <td><%= result 3 %></td>
+    <td><%= result 'add_consultants' %></td>
   </tr>
   <tr>
     <td>获取咨询学员列表</td>
-    <td><%= result 4 %></td>
+    <td><%= result 'get_consultants' %></td>
   </tr>
   <tr>
     <td>增加招生</td>
-    <td><%= result 5 %></td>
+    <td><%= result 'add_students' %></td>
   </tr>
   <tr>
     <td>获取招生学员列表</td>
-    <td><%= result 6 %></td>
+    <td><%= result 'students' %></td>
   </tr>
   <tr>
     <td>删除咨询学员</td>
-    <td><%= result 7 %></td>
+    <td><%= result 'delete_consultants' %></td>
   </tr>
   <tr>
     <td>删除招生学员</td>
-    <td><%= result 8 %></td>
+    <td><%= result 'delete_students' %></td>
   </tr>
   <tr>
     <td>退出登录</td>
-    <td><%= result 9 %></td>
+    <td><%= result 'logout' %></td>
   </tr>
 </table>
 
