--- a/test_for_school/views/index.html.erb
+++ b/test_for_school/views/index.html.erb
@@ -1,6 +1,5 @@
 <h1>特快拉教练版测试</h1>
 
-<!-- 注册尚未写 -->
 <table border=0>
   <tr>
     <th>测试内容</th>
@@ -8,19 +7,19 @@
   </tr>
   <tr>
     <td>获取本月招生人数和获取本月营收并选用测试账号登录</td>
-    <td><%= result 1 %></td>
+    <td><%= result 'get_the_amount_of_students_of_this_month' %></td>
   </tr>
   <tr>
     <td>获取教练列表</td>
-    <td><%= result 2 %></td>
+    <td><%= result 'get_the_teachers' %></td>
   </tr>
   <tr>
     <td>获取学员列表</td>
-    <td><%= result 3 %></td>
+    <td><%= result 'get_the_students' %></td>
   </tr>
   <tr>
     <td>退出登录</td>
-    <td><%= result 4 %></td>
+    <td><%= result 'logout' %></td>
   </tr>
 </table>
 
