--- a/admin/views/push/_form.erb
+++ b/admin/views/push/_form.erb
@@ -12,24 +12,25 @@
   <!--</div>-->
   <label class="col-sm-2 control-label">推送渠道</label>
   <div class="col-sm-10">
+    <!--<label class="checkbox-inline">-->
+      <!--<input type="checkbox" id="" name="" class="edtions"> 全部-->
+    <!--</label>-->
     <label class="checkbox-inline">
-      <input type="checkbox" id="" value="option1" name="push[editions]"> 全部
+      <input type="checkbox" id="" value="1" name="" class="edtions"> 学员版
     </label>
     <label class="checkbox-inline">
-      <input type="checkbox" id="" value="1" name="push[editions]"> 学员版
+      <input type="checkbox" id="" value="2" name="" class="edtions"> 教练版
     </label>
     <label class="checkbox-inline">
-      <input type="checkbox" id="" value="2" name="push[editions]"> 教练版
+      <input type="checkbox" id="" value="3" name="" class="edtions"> 驾校版
     </label>
     <label class="checkbox-inline">
-      <input type="checkbox" id="" value="3" name="push[editions]"> 驾校版
+      <input type="checkbox" id="" value="4" name="" class="edtions"> 门店版
     </label>
     <label class="checkbox-inline">
-      <input type="checkbox" id="" value="4" name="push[editions]"> 门店版
+      <input type="checkbox" id="" value="5" name="" class="edtions"> 代理渠道版
     </label>
-    <label class="checkbox-inline">
-      <input type="checkbox" id="" value="5" name="push[editions]"> 代理渠道版
-    </label>
+    <input type="hidden" name="push[editions]" value="" id="edtions"/>
   </div>
 </div>
 
@@ -46,5 +47,12 @@
     <!--<%= f.date_field :push_at, :class => 'form-control input-xlarge input-with-feedback', :autofocus => true ,:placeholder => '请输入11位手机号码' ,:required => 'required',:pattern => "[0-9]{11}" %>-->
   </div>
 </div>
+<script>
+  $(function(){
+    $(document).on('change','.edtions',function(){
+      $('#edtions').val($('.edtions:checked').map(function(){return this.value}).get().join(':'));
+    })
+  })
+</script>
 
 
