--- a/admin/views/roles/index.erb
+++ b/admin/views/roles/index.erb
@@ -31,7 +31,6 @@
             <th>手机号</th>
             <th>上次登录时间</th>
             <th>操作</th>
-            <th></th>
           </tr>
           </thead>
           <tbody>
@@ -41,15 +40,18 @@
               <td><%= user.name%></td>
               <td><%= user.mobile%></td>
               <td><%= user.last_login_at%></td>
-              <td><button class="btn btn-primary" data-role="<%= user.role_id %>" data-mobile="<%= user.mobile %>"
-                     data-toggle="modal" data-target="#myModal">修改密码</button></td>
               <td>
-                <div class='list-row-action-wrapper'>
-                  <%- form_tag url(:roles, :destroy, :id => user.id), :method => :delete do %>
-                      <%= submit_tag pat(:delete), :class =>'btn btn-danger btn-small' %>
-                  <% end %>
-                </div>
+                <button class="btn btn-primary change-psd" data-id="<%= user.id %>"
+                     data-toggle="modal" data-target="#myModal">修改密码</button>
+                <a href="/web/roles/destroy/<%= user.id %>" class="btn btn-danger">删除</a>
               </td>
+              <!--<td>-->
+                <!--<div class='list-row-action-wrapper'>-->
+                  <!--<%- form_tag url(:roles, :destroy, :id => user.id), :method => :delete do %>-->
+                      <!--<%= submit_tag pat(:delete), :class =>'btn btn-danger btn-small' %>-->
+                  <!--<% end %>-->
+                <!--</div>-->
+              <!--</td>-->
             </tr>
           <% end %>
           </tbody>
@@ -86,28 +88,29 @@
             </h4>
           </div>
           <div class="modal-body">
-            <form action="/web/" class="form-horizontal">
+            <form action="/web/roles/change" class="form-horizontal" method="post">
               <div class="form-group ">
                 <label class="col-sm-2 control-label">新密码</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control" name="new_psd" required placeholder="请输入新密码" >
+                  <input type="text" class="form-control" name="new_password" required placeholder="请输入新密码" >
                 </div>
               </div>
               <div class="form-group ">
                 <label class="col-sm-2 control-label">确认密码</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control" name="confirm_psd" required placeholder="请确认新密码">
+                  <input type="text" class="form-control" name="confirm_password" required placeholder="请确认新密码">
                 </div>
               </div>
+              <input type="hidden" id="mobile" name="id">
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default"
+                        data-dismiss="modal">关闭
+                </button>
+                <input type="submit" class="btn btn-primary">
+
+                </input>
+              </div>
             </form>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default"
-                    data-dismiss="modal">关闭
-            </button>
-            <button type="button" class="btn btn-primary">
-              提交更改
-            </button>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal -->
@@ -138,6 +141,11 @@
         return
       }
       location.href = '?role_id=' + _val;
+    });
+
+    var $mobile = $('#mobile');
+    $(document).on('click','.change-psd',function(){
+      $mobile.val($(event.target).attr('data-id'));
     })
   })
 </script>
