--- a/admin/views/login/index.erb
+++ b/admin/views/login/index.erb
@@ -7,7 +7,7 @@
   </div>
   <h3 class="sign-title">特快拉，中国最好的驾校SaaS平台</h3>
   <hr>
-  <form class="form-signin" method="post" action="<%= url(:logins, :create) %>">
+  <form class="form-signin" method="post" action="<%= url(:login, :create) %>">
     <!--<div class="form-signin-heading text-center">-->
         <!--<h1 class="sign-title">Sign In</h1>-->
         <!--<img src="images/login-logo.png" alt=""/>-->
