--- a/admin/views/layouts/_nav.erb
+++ b/admin/views/layouts/_nav.erb
@@ -32,7 +32,7 @@
           <ul class="dropdown-menu">
             <li><a href="#">Profile</a></li>
             <li><a href="#">Settings</a></li>
-            <li><a href="<%= url(:logins, :logout)%>">登出</a></li>
+            <li><a href="<%= url(:login, :logout)%>">登出</a></li>
           </ul>
         </li>
       </ul>
