--- a/admin/views/layouts/_nav.erb
+++ b/admin/views/layouts/_nav.erb
@@ -17,7 +17,9 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="/web/">首页</a></li>
-        <li><a href="#">财务管理</a></li>
+        <li><a href="">财务管理</a></li>
+        <li><a href="/web/signup">报名管理</a></li>
+        <li><a href="#">约车管理</a></li>
         <li><a href="/web/news_management" >新闻管理</a></li>
         <li><a href="/web/push">推送管理</a></li>
         <li><a href="/web/roles">人员管理</a></li>
@@ -27,6 +29,7 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown" style="padding: 15px;color: #fff">xx驾校</li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_account.name %><b class="caret"></b></a>
           <ul class="dropdown-menu">
