--- a/admin/views/layouts/_nav.erb
+++ b/admin/views/layouts/_nav.erb
@@ -19,7 +19,7 @@
         <li><a href="/web/">首页</a></li>
         <li><a href="">财务管理</a></li>
         <li><a href="/web/signup">报名管理</a></li>
-        <li><a href="#">约车管理</a></li>
+        <li><a href="/web/order">约车管理</a></li>
         <li><a href="/web/news_management" >新闻管理</a></li>
         <li><a href="/web/push">推送管理</a></li>
         <li><a href="/web/roles">人员管理</a></li>
