--- a/admin/views/order/index.erb
+++ b/admin/views/order/index.erb
@@ -13,25 +13,24 @@
                 <th>ID</th>
                 <th>学员姓名</th>
                 <th>手机号</th>
-                <th>性别</th>
-                <th>价格</th>
+                <th>教练姓名</th>
+                <th>场地</th>
+                <th>约车时间</th>
                 <th>状态</th>
-                <th>报名时间</th>
-                <th>xx时间</th>
+                <th>订单创建时间</th>
               </tr>
               </thead>
               <tbody>
-
-                  <% @signup.each do |item| %>
+                <% @order.each do |item|%>
                   <tr>
                     <td><%= item.id %></td>
                     <td><%= item.user.name %></td>
                     <td><%= item.user.mobile %></td>
-                    <td><%= item.user.sex_format %></td>
-                    <td><%= item.amount %></td>
+                    <td><%= item.teacher.name %></td>
+                    <td><%= item.train_field_name %></td>
+                    <td><%= item.book_time %></td>
                     <td><%= item.status_word %></td>
                     <td><%= item.created_at %></td>
-                    <td></td>
                   </tr>
                 <% end %>
               </tbody>
@@ -39,7 +38,7 @@
             <p style="padding: 10px 10px;">每页20条</p>
           </section>
           <div class="row">
-            <%= will_paginate @signup,renderer: WillPaginate::ViewHelpers::BoostrapLinkRenderer %>
+            <%= will_paginate @order,renderer: WillPaginate::ViewHelpers::BoostrapLinkRenderer %>
           </div>
         </div>
       </div>
