--- a/admin/views/layouts/_nav.erb
+++ b/admin/views/layouts/_nav.erb
@@ -29,9 +29,8 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown" style="padding: 15px;color: #fff">xx驾校</li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_account.name %><b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= Role.get(session[:role_id]).school.name %> <%= current_account.name %><b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a href="#">Profile</a></li>
             <li><a href="#">Settings</a></li>
