--- a/admin/views/index/index.erb
+++ b/admin/views/index/index.erb
@@ -4,14 +4,18 @@
 
   <!--body wrapper start-->
   <div class="wrapper">
-    <div class="panel col-lg-6">
-      <h3><%= @user.name %>，欢迎您登录 <%= @school.name %> 驾校的后台管理系统</h3>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="panel col-md-8" >
+          <h3><%= @user.name %>，欢迎您登录 <%= @school.name %> 驾校的后台管理系统</h3>
 
-      <h3>现总共有<%= @student.count %>位学员，<%= @teacher.count %>位教练，<%= @car.count %>辆车，<%= @shop.count %>个门店</h3>
+          <h3>现总共有<%= @student.count %>位学员，<%= @teacher.count %>位教练，<%= @car.count %>辆车，<%= @shop.count %>个门店</h3>
 
-      <h3>本月报名人数<% %>人，营业收入xx元</h3>
+          <h3>本月报名人数xx人，营业收入xx元</h3>
 
-      <h3>今天约车人数xx人，考试人数xx人</h3>
+          <h3>今天约车人数xx人，考试人数xx人</h3>
+        </div>
+      </div>
     </div>
   </div>
   <!--body wrapper end-->
