--- a/admin/views/layouts/application.erb
+++ b/admin/views/layouts/application.erb
@@ -11,9 +11,9 @@
   <%= javascript_include_tag '../../javascripts/jquery-1.11.0.min' %>
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
-  <script src="../javascripts/bootstrap.min.js"></script>
-  <script src="../javascripts/admin/html5shiv.js"></script>
-  <script src="../javascripts/admin/respond.min.js"></script>
+  <!--<script src="../javascripts/bootstrap.min.js"></script>-->
+  <!--<script src="../javascripts/admin/html5shiv.js"></script>-->
+  <!--<script src="../javascripts/admin/respond.min.js"></script>-->
   <![endif]-->
 </head>
 <%=yield%>
