--- a/admin/views/signup/index.erb
+++ b/admin/views/signup/index.erb
@@ -17,7 +17,7 @@
                 <th>价格</th>
                 <th>状态</th>
                 <th>报名时间</th>
-                <th>xx时间</th>
+                <th>付款时间</th>
               </tr>
               </thead>
               <tbody>
@@ -30,8 +30,8 @@
                     <td><%= item.user.sex_format %></td>
                     <td><%= item.amount %></td>
                     <td><%= item.status_word %></td>
-                    <td><%= item.created_at %></td>
-                    <td></td>
+                    <td><%= item.created_at.to_s[0..9] %></td>
+                    <td><%= item.pay_at.to_s[0..9] %></td>
                   </tr>
                 <% end %>
               </tbody>
