--- a/admin/views/layouts/_nav.erb
+++ b/admin/views/layouts/_nav.erb
@@ -23,17 +23,14 @@
         <li><a href="/web/news_management" >新闻管理</a></li>
         <li><a href="/web/push">推送管理</a></li>
         <li><a href="/web/roles">人员管理</a></li>
-        <li><a href="#">导入功能</a></li>
+        <li><a href="/web/import">导入功能</a></li>
         <li><a href="#">使用帮助</a></li>
-        <li><a href="/web/edit_psd">修改密码</a></li>
       </ul>
-
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= Role.get(session[:role_id]).school.name %> <%= current_account.name %><b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Settings</a></li>
+            <li><a href="/web/edit_psd">修改密码</a></li>
             <li><a href="<%= url(:login, :logout)%>">登出</a></li>
           </ul>
         </li>
