--- a/admin/views/signup/index.erb
+++ b/admin/views/signup/index.erb
@@ -9,25 +9,25 @@
           <section class="panel">
             <table class="table table-striped table-hover table-condensed">
               <thead>
-              <tr>
-                <th>ID</th>
-                <th>学员姓名</th>
-                <th>手机号</th>
-                <th>性别</th>
-                <th>价格</th>
-                <th>状态</th>
-                <th>报名时间</th>
-                <th>付款时间</th>
-              </tr>
+                <tr>
+                  <th>ID</th>
+                  <th>学员姓名</th>
+                  <th>手机号</th>
+                  <th>性别</th>
+                  <th>价格</th>
+                  <th>状态</th>
+                  <th>报名时间</th>
+                  <th>付款时间</th>
+                </tr>
               </thead>
               <tbody>
 
                   <% @signup.each do |item| %>
                   <tr>
                     <td><%= item.id %></td>
-                    <td><%= item.user.name %></td>
-                    <td><%= item.user.mobile %></td>
-                    <td><%= item.user.sex_format %></td>
+                    <td><%= item.user.name if item.user.present? %></td>
+                    <td><%= item.user.mobile if item.user.present? %></td>
+                    <td><%= item.user.sex_format if item.user.present? %></td>
                     <td><%= item.amount %></td>
                     <td><%= item.status_word %></td>
                     <td><%= item.created_at.to_s[0..9] %></td>
