--- a/admin/views/layouts/_nav.erb
+++ b/admin/views/layouts/_nav.erb
@@ -23,6 +23,8 @@
         <li><a href="/web/news_management" >新闻管理</a></li>
         <li><a href="/web/push">推送管理</a></li>
         <li><a href="/web/roles">人员管理</a></li>
+        <li><a href="/web/menu">菜单管理</a></li>
+        <li><a href="/web/device">设备管理</a></li>
         <li><a href="/web/import">导入功能</a></li>
         <li><a href="#">使用帮助</a></li>
       </ul>
