--- a/admin/views/import/index.erb
+++ b/admin/views/import/index.erb
@@ -80,7 +80,7 @@
               <% @users.each do |item| %>
                   <tr>
                     <td><%= item.id %></td>
-                    <td><%= item.name %></td>
+                    <td><%= item.name if item.name.present? %></td>
                     <td><%= item.mobile %></td>
                     <td><%= item.status_flag_word %></td>
                     <td><%= item.exam_type_word %></td>
