--- a/admin/views/news_management/detail_mobile.erb
+++ b/admin/views/news_management/detail_mobile.erb
@@ -1,17 +1,23 @@
-<%= stylesheet_link_tag '../../stylesheets/bootstrap.min' %>
-
-<body style="background-color: #EFF0F4;padding-top: 20px">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-lg-12">
-        <section class="panel" style="padding: 10px">
-          <h1 class="text-center"><%= @news.title %></h1>
-          <h5 class="text-right" style="margin-bottom: 20px;color: #ccc">阅读数:<%= @news.view_count %></h5>
-          <div class="news-content">
-            <%= @news.content.html_safe %>
-          </div>
-        </section>
+<html>
+  <head>
+    <title>新闻详情</title>
+    <meta id="viewport" name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1; user-scalable=no;">
+    <%= stylesheet_link_tag '../../stylesheets/bootstrap.min' %>
+  </head>
+  <body style="background-color: #EFF0F4;padding-top: 20px">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-12">
+          <section class="panel" style="padding: 10px">
+            <h1 class="text-center"><%= @news.title %></h1>
+            <h5 class="text-right" style="margin-bottom: 20px;color: #ccc">阅读数:<%= @news.view_count %></h5>
+            <div class="news-content">
+              <%= @news.content.html_safe %>
+            </div>
+          </section>
+        </div>
       </div>
     </div>
-  </div>
-</body>
+  </body>
+</html>
+
