--- a/admin/views/push/_form.erb
+++ b/admin/views/push/_form.erb
@@ -1,7 +1,7 @@
 <div class="form-group ">
   <label class="col-sm-2 control-label">推送内容</label>
   <div class="col-sm-10">
-    <%= f.text_area :message, :class => 'form-control input-xlarge input-with-feedback' %>
+    <%= f.text_area :message, :class => 'form-control input-xlarge input-with-feedback' ,:placeholder => '七十个字以内',:maxlength => '70'%>
   </div>
 </div>
 
