--- a/admin/views/layouts/_nav.erb
+++ b/admin/views/layouts/_nav.erb
@@ -17,7 +17,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="/web/">首页</a></li>
-        <li><a href="">财务管理</a></li>
+        <li><a href="/web/finance">财务管理</a></li>
         <li><a href="/web/signup">报名管理</a></li>
         <li><a href="/web/order">约车管理</a></li>
         <li><a href="/web/news_management" >新闻管理</a></li>
@@ -26,7 +26,7 @@
         <li><a href="/web/menu">菜单管理</a></li>
         <li><a href="/web/device">设备管理</a></li>
         <li><a href="/web/import">导入功能</a></li>
-        <li><a href="#">使用帮助</a></li>
+        <li><a href="/web/help">使用帮助</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
