--- a/admin/views/import/index.erb
+++ b/admin/views/import/index.erb
@@ -23,39 +23,44 @@
       </div>
       <div class="row" style="margin-bottom: 10px">
         <div class="col-lg-4 ">
-          <form action="/web/import" class="form panel">
-            <div class="row" style="margin-bottom: 10px">
-              <div class="col-lg-10">
-                <div class="input-group">
-                  <div class="input-group-addon">名字</div>
-                  <%=text_field_tag 'name', :class=> 'form-control', :value => params[:name]%>
-                </div>
-              </div>
+          <form action="/web/import" class="form panel" style="padding: 10px 0;">
+            <div class="panel-heading">
+              查询条件
             </div>
-            <div class="row" style="margin-bottom: 10px">
-              <div class="col-lg-10">
-                <div class="input-group">
-                  <div class="input-group-addon">手机号码</div>
-                  <%=text_field_tag 'mobile', :class=> 'form-control', :value => params[:mobile]%>
+            <div class="panel-body">
+              <div class="row" style="margin-bottom: 10px">
+                <div class="col-lg-10">
+                  <div class="input-group">
+                    <div class="input-group-addon">名字</div>
+                    <%=text_field_tag 'name', :class=> 'form-control', :value => params[:name]%>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="row" style="margin-bottom: 10px">
-              <div class="col-lg-10">
-                <div class="input-group">
-                  <div class="input-group-addon">阶段</div>
-                  <%=select_tag 'status_flag', :options => User.status_flag, :include_blank => true, :class => 'form-control', :selected => params[:status_flag] %>
+              <div class="row" style="margin-bottom: 10px">
+                <div class="col-lg-10">
+                  <div class="input-group">
+                    <div class="input-group-addon">手机号码</div>
+                    <%=text_field_tag 'mobile', :class=> 'form-control', :value => params[:mobile]%>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-10">
-                <div class="input-group">
-                  <div class="input-group-addon">驾考类型</div>
-                  <%=select_tag 'exam_type', :options => User.exam_type, :include_blank => true, :class => 'form-control', :selected => params[:status_flag] %>
+              <div class="row" style="margin-bottom: 10px">
+                <div class="col-lg-10">
+                  <div class="input-group">
+                    <div class="input-group-addon">阶段</div>
+                    <%=select_tag 'status_flag', :options => User.status_flag, :include_blank => true, :class => 'form-control', :selected => params[:status_flag] %>
+                  </div>
                 </div>
               </div>
-              <input type="submit" class="btn btn-primary" value="查询">
+              <div class="row">
+                <div class="col-lg-10">
+                  <div class="input-group">
+                    <div class="input-group-addon">驾考类型</div>
+                    <%=select_tag 'exam_type', :options => User.exam_type, :include_blank => true, :class => 'form-control', :selected => params[:status_flag] %>
+                  </div>
+                </div>
+                <input type="submit" class="btn btn-primary" value="条件">
+              </div>
             </div>
           </form>
         </div>
