--- a/admin/views/index/index.erb
+++ b/admin/views/index/index.erb
@@ -6,14 +6,14 @@
   <div class="wrapper">
     <div class="container-fluid">
       <div class="row">
-        <div class="panel col-lg-6">
+        <div class="panel col-lg-6" style="padding: 20px">
           <h3><%= @user.name %>，欢迎您登录 <%= @school.name %> 驾校的后台管理系统</h3>
 
-          <h3>现总共有<%= @student.count %>位学员，<%= @teacher.count %>位教练，<%= @car.count %>辆车，<%= @shop.count %>个门店</h3>
+          <h4>现总共有<%= @student.count %>位学员，<%= @teacher.count %>位教练，<%= @car.count %>辆车，<%= @shop.count %>个门店</h4>
 
-          <h3>本月报名人数<%= @signups %>人，营业收入<%= @amounts %>元</h3>
+          <h4>本月报名人数<%= @signups %>人，营业收入<%= @amounts %>元</h4>
 
-          <h3>今天约车人数<%= @orders %>人，考试人数<%= @exams %>人</h3>
+          <h4>今天约车人数<%= @orders %>人，考试人数<%= @exams %>人</h4>
         </div>
       </div>
     </div>
