--- a/admin/views/layouts/application.erb
+++ b/admin/views/layouts/application.erb
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <link rel="icon" href="/images/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="ThemeBucket">
-  <link rel="shortcut icon" href="#" type="image/png">
   <title><%= @title %></title>
   <%= stylesheet_link_tag '../../stylesheets/admin/style', '../../stylesheets/admin/style-responsive' %>
   <%= javascript_include_tag '../../javascripts/jquery-1.11.0.min' %>
