--- a/admin/views/news_management/index.erb
+++ b/admin/views/news_management/index.erb
@@ -27,7 +27,7 @@
                   <tr>
                     <td><%= new.id %></td>
                     <td><a href="/web/news_management/detail/<%= new.id %>"><%= new.title %></a></td>
-                    <td><%= new.view_count %></td>
+                    <td><%= new.view_count ? new.view_count : '0'%></td>
                     <td><%= new.created_at.to_s[0..9]%></td>
                     <td><a href="/web/news_management/edit/<%= new.id %>">编辑</a>|<a href="/web/news_management/destroy/<%= new.id %>">删除</a></td>
                   </tr>
