--- a/admin/views/import/index.erb
+++ b/admin/views/import/index.erb
@@ -59,7 +59,7 @@
                     <%=select_tag 'exam_type', :options => User.exam_type, :include_blank => true, :class => 'form-control', :selected => params[:status_flag] %>
                   </div>
                 </div>
-                <input type="submit" class="btn btn-primary" value="条件">
+                <input type="submit" class="btn btn-primary" value="提交">
               </div>
             </div>
           </form>
