--- a/admin/views/news_management/detail.erb
+++ b/admin/views/news_management/detail.erb
@@ -8,7 +8,7 @@
         <div class="col-lg-12">
           <section class="panel" style="padding: 10px">
             <h1 class="text-center"><%= @news.title %></h1>
-            <h4 class="text-center" style="margin-bottom: 20px">阅读数:xxx</h4>
+            <h4 class="text-center" style="margin-bottom: 20px">阅读数:<%= @news.view_count %></h4>
             <div class="news-content">
               <%= @news.content.html_safe %>
             </div>
