--- a/admin/views/order/index.erb
+++ b/admin/views/order/index.erb
@@ -5,6 +5,27 @@
   <div class="wrapper">
     <div class="container-fluid">
       <div class="row">
+        <div class="col-lg-4">
+          <form action="" class="form panel" style="padding: 10px;">
+
+            <div class="row" style="margin-bottom: 10px">
+              <div class="col-lg-10">
+                <input type="text" class="form-control" placeholder="请输入学员或者教练姓名" name="name" value="<%= params[:name] %>">
+              </div>
+            </div>
+            <div class="row" style="margin-bottom: 10px">
+              <div class="col-lg-10">
+                <label class="checkbox-inline">
+                  <input type="radio" name="type" value="student"> 学员
+                </label>
+                <label class="checkbox-inline">
+                  <input type="radio" name="type" value="teacher"> 教练
+                </label>
+              </div>
+            </div>
+            <input type="submit" value="搜索" class="btn btn-success">
+          </form>
+        </div>
         <div class="col-lg-12">
           <section class="panel">
             <table class="table table-striped table-hover table-condensed">
@@ -28,9 +49,9 @@
                     <td><%= item.user.mobile if item.user.present? %></td>
                     <td><%= item.teacher.name if item.teacher.present? %></td>
                     <td><%= item.train_field_name %></td>
-                    <td><%= item.book_time %></td>
-                    <td><%= item.status_word %></td>
-                    <td><%= item.created_at %></td>
+                    <td><%= item.book_time_conversion %></td>
+                    <td><%= item.status_word_html.html_safe %></td>
+                    <td><%= item.created_at.strftime("%Y-%m-%d %H:%M:%S") %></td>
                   </tr>
                 <% end %>
               </tbody>
