--- a/admin/views/roles/_form.erb
+++ b/admin/views/roles/_form.erb
@@ -20,10 +20,16 @@
 </div>
 
 <div class="form-actions">
-  <label class="col-sm-2 control-label"></label>
-  <div class="col-sm-8">
-    <%= f.submit pat(:save), :class => 'btn btn-success' %>
-    &nbsp;
-    <%= link_to pat(:cancel), url(:roles, :index), :class => 'btn btn-default' %>
+  <div class="row">
+    <label class="col-sm-2 control-label"></label>
+    <p class="col-sm-8">*新建用户默认密码为 123456</p>
+  </div>
+  <div class="row">
+    <label class="col-sm-2 control-label"></label>
+    <div class="col-sm-8">
+      <%= f.submit pat(:save), :class => 'btn btn-success' %>
+      &nbsp;
+      <%= link_to pat(:cancel), url(:roles, :index), :class => 'btn btn-default' %>
+    </div>
   </div>
 </div>
