--- a/admin/views/menu/index.erb
+++ b/admin/views/menu/index.erb
@@ -3,6 +3,8 @@
   <%= partial 'layouts/nav' %>
   <!--body wrapper start-->
   <div class="wrapper">
+    <%= {:error => 'danger', :warning => 'warning', :success => 'success', :notice => 'info'}.map { |type, class_name| flash_tag(type, :class => "alert alert-#{class_name} fade in", :bootstrap => true) }.join.html_safe %>
+
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-12">
