--- a/admin/views/news_management/index.erb
+++ b/admin/views/news_management/index.erb
@@ -3,12 +3,15 @@
   <%= partial 'layouts/nav' %>
   <!--body wrapper start-->
   <div class="wrapper">
+    <%= {:error => 'danger', :warning => 'warning', :success => 'success', :notice => 'info'}.map { |type, class_name| flash_tag(type, :class => "alert alert-#{class_name} fade in", :bootstrap => true) }.join.html_safe %>
+
     <div class="container-fluid" style="margin-bottom:20px">
       <div class="row" style="margin-bottom:20px">
         <div class="col-lg-2">
           <a class="btn btn-success" href="/web/news_management/new">添加新闻</a>
         </div>
       </div>
+
       <div class="row">
           <div class="col-lg-12">
             <section class="panel">
