--- a/admin/views/roles/index.erb
+++ b/admin/views/roles/index.erb
@@ -6,6 +6,8 @@
   <!--body wrapper start-->
   <div class="wrapper">
     <div class="container-fluid" style="margin-bottom:20px">
+      <%= {:error => 'danger', :warning => 'warning', :success => 'success', :notice => 'info'}.map { |type, class_name| flash_tag(type, :class => "alert alert-#{class_name} fade in", :bootstrap => true) }.join.html_safe %>
+
       <div class="row">
         <div class="col-lg-2">
           <select class="form-control select-role">
